--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -25,10 +25,10 @@ jobs:
           username: ${{ vars.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
-        with:
-          platforms: amd64,arm64
+      # - name: Set up QEMU
+      #   uses: docker/setup-qemu-action@v3
+      #   with:
+      #     platforms: amd64,arm64
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -40,4 +40,4 @@ jobs:
           file: ${{ matrix.file }}
           push: true
           tags: ${{ vars.DOCKERHUB_USERNAME }}/${{ matrix.image }}:latest
-          platforms: linux/amd64,linux/arm64
+          # platforms: linux/amd64,linux/arm64
